--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,15 @@ li, p, h1, h2, h3, h4{
     height: auto;
     background-color: rgb(10, 10, 10);
     float: left;
+    display: flex;
+    justify-content: center;
+}
+
+.img-furro{
+    width: 100%;
+    height: auto;
+    max-width: 500px;
+
 }
 
 .navbar{
@@ -91,7 +100,7 @@ li, p, h1, h2, h3, h4{
 
 .coluna-2{
     width: 100%;
-    height: ;
+
     background-color: rgb(255, 255, 255);
     float: left;
 }
@@ -214,7 +223,7 @@ li, p, h1, h2, h3, h4{
 
 .form{
     width: 100%;
-    height: 650px;
+    height: auto;
     float: left;
     border-radius: 5px;
     background-color: #ffffff;
@@ -224,7 +233,7 @@ li, p, h1, h2, h3, h4{
 .footer{
     margin-top: 70px;
     width: 100%;
-    height: 50px;
+    height: auto;
     background-color: #AC43D9;
     float: left;
 }
@@ -239,6 +248,15 @@ li, p, h1, h2, h3, h4{
     .container, .header, .navbar, .content, .footer {
         width: 100%;
     }
+
+    .linha-4{
+        flex-flow: column;
+    }
+
+    .depoimento{
+        flex-flow: column;
+    }
+
 }
 
 input[type=submit]:hover {
@@ -355,6 +373,25 @@ input[type=submit]:hover {
 
 .cta-button:hover {
     background-color: #b86bda;
+}
+
+.pf-button {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    max-width: 99%;
+    height: 100%;
+    background-color: #402a49d2;
+    color: #FFF;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    overflow: hidden; /* Para esconder o texto que eventualmente possa vazar */
+}
+.pf-button:hover {
+    background-color: #422150af;
 }
 
 
